[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/tabs/workers_tab.gd" id="1"]

[node name="WorkersTab" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "CREW MANAGEMENT"
theme_override_font_sizes/font_size = 20

[node name="HireButton" type="Button" parent="VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Hire Worker"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="WorkersList" type="VBoxContainer" parent="VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HirePopup" type="PanelContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="PopupVBox" type="VBoxContainer" parent="VBox/HirePopup"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PopupTitle" type="Label" parent="VBox/HirePopup/PopupVBox"]
layout_mode = 2
text = "Available Candidates"
theme_override_font_sizes/font_size = 16

[node name="CandidatesList" type="VBoxContainer" parent="VBox/HirePopup/PopupVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="CloseBtn" type="Button" parent="VBox/HirePopup/PopupVBox"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBox/HirePopup/PopupVBox/CloseBtn" to="VBox/HirePopup" method="set_visible" binds= [false]]
